# speedcrunch-nightlies

./: .gitignore  README.md  link_test.link
adm/: install-all-dependencies.sh  install-app-dependencies.sh  set-project-version.sh  sync-translations.sh
etc/: HOWTO-MINGW32.md
latest/: speedcrunch-portable_2015-06-16.exe.REMOVED.git-id  speedcrunch-portable_2015-09-01.exe.REMOVED.git-id  speedcrunch-portable_2015-09-05.exe.REMOVED.git-id  speedcrunch-portable_2015-12-27.exe.REMOVED.git-id  speedcrunch-portable_2016-02-06.exe.REMOVED.git-id  speedcrunch-portable_2016-03-01.exe.REMOVED.git-id  speedcrunch-portable_2016-03-02.exe.REMOVED.git-id  speedcrunch-portable_2016-03-06.exe.REMOVED.git-id  speedcrunch-portable_2016-03-18.exe.REMOVED.git-id  speedcrunch-portable_2016-03-20.exe.REMOVED.git-id  speedcrunch-portable_2016-03-23.exe.REMOVED.git-id  speedcrunch-portable_2016-03-30.exe.REMOVED.git-id  speedcrunch-portable_2016-04-01.exe.REMOVED.git-id  speedcrunch-portable_2016-04-14.exe.REMOVED.git-id  speedcrunch-portable_2016-04-27.exe.REMOVED.git-id  speedcrunch-portable_2016-04-28.exe.REMOVED.git-id  speedcrunch-portable_2016-05-07.exe.REMOVED.git-id  speedcrunch_2015-06-16.exe.REMOVED.git-id  speedcrunch_2016-01-21.exe.REMOVED.git-id  speedcrunch_2016-02-06.exe.REMOVED.git-id  speedcrunch_2016-02-13.exe.REMOVED.git-id  speedcrunch_2016-03-01.exe.REMOVED.git-id  speedcrunch_2016-03-02.exe.REMOVED.git-id  speedcrunch_2016-03-09.exe.REMOVED.git-id  speedcrunch_2016-03-10.exe.REMOVED.git-id  speedcrunch_2016-03-20.exe.REMOVED.git-id  speedcrunch_2016-03-26.exe.REMOVED.git-id  speedcrunch_2016-03-30.exe.REMOVED.git-id  speedcrunch_2016-04-11.exe.REMOVED.git-id  speedcrunch_2016-04-13.exe.REMOVED.git-id  speedcrunch_2016-04-15.exe.REMOVED.git-id  speedcrunch_2016-04-27.exe.REMOVED.git-id  speedcrunch_2016-04-28.exe.REMOVED.git-id  speedcrunch_2016-05-02.exe.REMOVED.git-id  speedcrunch_2016-05-07.exe.REMOVED.git-id
pkg/: Info.plist  org.speedcrunch.SpeedCrunch.desktop  org.speedcrunch.SpeedCrunch.metainfo.xml  speedcrunch.appdata.xml  speedcrunch.desktop
speedcrunch/: .gitattributes  .gitignore  README.md
speedcrunch/doc/src/: CMakeLists.txt  Makefile  conf.py  doc-tool.py  languages.py  make.bat
speedcrunch/doc/src/_static_standalone/: extra.css
speedcrunch/doc/src/_templates_standalone/: donate.html  download.html  entrance.html  entrance_navbar.html  globaltoc.html  language.html  layout.html  navbar.html  navbarsearchbox.html  relations.html  scrollspy.html
speedcrunch/doc/src/advanced/: colorschemeformat.rst  index.rst
speedcrunch/doc/src/extensions/: qtkeyword.py  sc_lexer.py  sc_post_config.py  translations.py
speedcrunch/doc/src/locale/de_DE/LC_MESSAGES/: index.po  installation.po  reference.po
speedcrunch/doc/src/locale/es_ES/LC_MESSAGES/: extra-doc-strings.po
speedcrunch/doc/src/locale/fr_FR/LC_MESSAGES/: index.po  reference.po
speedcrunch/doc/src/reference/: basic.rst  constants.rst  ieee754.rst  index.rst  integer.rst  statistical.rst
speedcrunch/doc/src/userguide/: advanced.rst  first_steps.rst  installation.rst  interface.rst  syntax.rst
src/: CMakeLists.txt  speedcrunch.pro
src/core/: constants.h  evaluator.cpp  evaluator.h  functions.cpp  numberformatter.cpp  session.cpp  settings.cpp
src/gui/: aboutbox.cpp  bitfieldwidget.cpp  bitfieldwidget.h  bookdock.cpp  bookdock.h  constantsdock.h  constantswidget.cpp  constantswidget.h  editor.cpp  editor.h  functionsdock.h  functionswidget.cpp  functionswidget.h  genericdock.h  historydock.cpp  historydock.h  historywidget.h  keypad.cpp  mainwindow.cpp  mainwindow.h  manualwindow.cpp  manualwindow.h  resultdisplay.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h  tipwidget.h  userfunctionlistwidget.h  userfunctionsdock.cpp  userfunctionsdock.h  variablelistwidget.cpp  variablelistwidget.h  variablesdock.h
src/math/: cmath.cpp  cmath.h  floatconvert.c  hmath.cpp  quantity.cpp  rational.cpp  units.cpp
src/resources/: speedcrunch.qrc
src/resources/color-schemes/: Breeze Dark.json  Solarized Dark.json  Standard.json  Sublime.json  Terminal.json  Tomorrow Night Bright.json
src/resources/locale/: ar.ts  ca_ES.qm  ca_ES.ts  cs_CZ.qm  cs_CZ.ts  da.qm  de_DE.ts  en_GB.ts  en_US.ts  es_AR.ts  es_ES.qm  es_ES.ts  et_EE.qm  et_EE.ts  eu_ES.qm  eu_ES.ts  fi_FI.qm  fi_FI.ts  fr_FR.qm  fr_FR.ts  he_IL.qm  he_IL.ts  hu_HU.qm  hu_HU.ts  id_ID.qm  ja_JP.qm  ja_JP.ts  ko_KR.ts  lt.qm  lt.ts  lv_LV.qm  lv_LV.ts  nb_NO.qm  nb_NO.ts  nl_NL.qm  pl_PL.qm  pl_PL.ts  pt_BR.qm  pt_BR.ts  pt_PT.qm  (+11 more)
src/resources/locale/.tx/: config
src/tests/: common.pri  testcmath.cpp  testcmath.pro  testcommon.h  testdmath.cpp  testevaluator.cpp  testfloatnum.c  testfloatnum.pro  testhmath.cpp  tests.pro  testser.cpp  testser.pro
win32/: README.md  speedcrunch-portable_2015-08-08_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-08-11_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-09-01.exe.REMOVED.git-id  speedcrunch-portable_2015-09-01_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-09-05.exe.REMOVED.git-id  speedcrunch-portable_2015-09-05_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-09-28.exe.REMOVED.git-id  speedcrunch-portable_2015-09-28_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-12-16.exe.REMOVED.git-id  speedcrunch-portable_2015-12-16_raw.exe.REMOVED.git-id  speedcrunch-portable_2015-12-27_raw.exe.REMOVED.git-id  speedcrunch-portable_2016-01-20.exe.REMOVED.git-id  speedcrunch-portable_2016-01-20_raw.exe.REMOVED.git-id  speedcrunch-portable_2016-01-21.exe.REMOVED.git-id  speedcrunch-portable_2016-01-21_raw.exe.REMOVED.git-id  speedcrunch-portable_2016-02-06.exe.REMOVED.git-id  speedcrunch-portable_2016-02-06_raw.exe.REMOVED.git-id  speedcrunch-portable_2016-02-13.exe.REMOVED.git-id  speedcrunch-portable_2016-02-29.exe.REMOVED.git-id  speedcrunch-portable_2016-03-02.exe.REMOVED.git-id  speedcrunch-portable_2016-03-09.exe.REMOVED.git-id  speedcrunch-portable_2016-03-10.exe.REMOVED.git-id  speedcrunch-portable_2016-03-22.exe.REMOVED.git-id  speedcrunch-portable_2016-03-26.exe.REMOVED.git-id  (+42 more)
www/: make.sh  (+1 more)
(+429 files in other folders)
